--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pixel-art-nft-mint",
+  "name": "Speed Racing-miniapp",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,23 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "@coinbase/onchainkit": "latest",
+    "@farcaster/miniapp-sdk": "^0.1.8",
+    "@farcaster/miniapp-wagmi-connector": "^1.0.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "@tanstack/react-query": "^5.81.5",
+	"lucide-react": "^0.460.0",
+	"unique-username-generator": "^1.3.0",
     "thirdweb": "^5.0.0",
     "@thirdweb-dev/sdk": "^4.0.0",
     "replicate": "^0.25.0",
     "ethers": "^5.7.2",
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "next": "15.3.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "viem": "^2.31.6",
+    "wagmi": "^2.16.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@farcaster/quick-auth": "^0.0.7",
+    "@next/eslint-plugin-next": "^15.3.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
     "eslint": "^9",
-    "eslint-config-next": "^15.0.0"
+    "eslint-config-next": "15.3.4",
+    "typescript": "^5"
   }
 }
